--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "dotenv": "^16.0.3",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
+    "line-notify-nodejs": "^1.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
     "prop-types": "^15.8.1",
