--- a/package.json
+++ b/package.json
@@ -45,15 +45,19 @@
     "@mui/icons-material": "^5.10.15",
     "@mui/lab": "^5.0.0-alpha.103",
     "@mui/material": "^5.10.9",
+    "@mui/x-data-grid": "^5.17.14",
+    "@mui/x-date-pickers": "^5.0.9",
     "apexcharts": "^3.36.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "gulp": "^4.0.2",
     "history": "^5.3.0",
     "jwt-decode": "^3.1.2",
     "line-notify-nodejs": "^1.0.1",
     "lodash": "^4.17.21",
     "numeral": "^2.0.6",
+    "pdfmake": "^0.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
