--- a/package.json
+++ b/package.json
@@ -59,11 +59,13 @@
     "image-to-base64": "^2.2.0",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "numeral": "^2.0.6",
     "pdfmake": "^0.2.6",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-big-calendar": "^1.6.9",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.37.0",
