--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "exceljs": "^4.3.0",
     "gulp": "^4.0.2",
     "history": "^5.3.0",
     "html-to-pdfmake": "^2.4.20",
