--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "exceljs": "^4.3.0",
+    "file-saver": "^2.0.5",
     "gulp": "^4.0.2",
     "history": "^5.3.0",
     "html-to-pdfmake": "^2.4.20",
