--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "@mui/x-data-grid": "^5.17.14",
     "@mui/x-date-pickers": "^6.3.1",
     "apexcharts": "^3.36.0",
+    "axios": "^1.6.0",
     "change-case": "^4.1.2",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
