--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "dotenv": "^16.0.3",
     "exceljs": "^4.3.0",
     "file-saver": "^2.0.5",
+    "formik": "^2.4.5",
     "gulp": "^4.0.2",
     "history": "^5.3.0",
     "html-to-pdfmake": "^2.4.20",
@@ -74,7 +75,8 @@
     "react-router-dom": "^6.4.2",
     "react-scripts": "^5.0.1",
     "simplebar-react": "^2.4.3",
-    "web-vitals": "^3.0.3"
+    "web-vitals": "^3.0.3",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
